--- a/Casino/App.config
+++ b/Casino/App.config
@@ -5,6 +5,9 @@
     <connectionStrings>
         <add name="Casino.My.MySettings.BD_CASINO2ConnectionString" connectionString="Data Source=DESKTOP-1VAV3Q8\SQLEXPRESS;Initial Catalog=BD_CASINO2;Integrated Security=True"
             providerName="System.Data.SqlClient" />
+        <add name="Casino.My.MySettings.BD_CASINO2ConnectionString1"
+            connectionString="Data Source=FENIX\SQLEXPRESS;Initial Catalog=BD_CASINO2;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
