--- a/Casino/Casino.vbproj
+++ b/Casino/Casino.vbproj
@@ -77,10 +77,15 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BD_CASINO2DataSet.xsd</DependentUpon>
     </Compile>
-    <Compile Include="login.Designer.vb">
-      <DependentUpon>login.vb</DependentUpon>
+    <Compile Include="BD_CASINO2DataSet1.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>BD_CASINO2DataSet1.xsd</DependentUpon>
     </Compile>
-    <Compile Include="login.vb">
+    <Compile Include="logindeprueba.Designer.vb">
+      <DependentUpon>logindeprueba.vb</DependentUpon>
+    </Compile>
+    <Compile Include="logindeprueba.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Ventas.vb">
@@ -113,8 +118,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="login.resx">
-      <DependentUpon>login.vb</DependentUpon>
+    <EmbeddedResource Include="logindeprueba.resx">
+      <DependentUpon>logindeprueba.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Ventas.resx">
       <DependentUpon>Ventas.vb</DependentUpon>
@@ -141,6 +146,17 @@
     <None Include="BD_CASINO2DataSet.xss">
       <DependentUpon>BD_CASINO2DataSet.xsd</DependentUpon>
     </None>
+    <None Include="BD_CASINO2DataSet1.xsc">
+      <DependentUpon>BD_CASINO2DataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="BD_CASINO2DataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>BD_CASINO2DataSet1.Designer.vb</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="BD_CASINO2DataSet1.xss">
+      <DependentUpon>BD_CASINO2DataSet1.xsd</DependentUpon>
+    </None>
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -151,6 +167,21 @@
       <LastGenOutput>Settings.Designer.vb</LastGenOutput>
     </None>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Coffeshop-Hipster-Solo_grande.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\android_honeycomb_background_by_iride113-d42fcbs.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\black_honeycomb_mesh_by_monkeymagico-d2yf739.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\black-pattern-squares-wallpaper-12.jpeg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Coffeshop-Hipster-80x80.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
