--- a/Casino/My Project/Settings.settings
+++ b/Casino/My Project/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=DESKTOP-1VAV3Q8\SQLEXPRESS;Initial Catalog=BD_CASINO2;Integrated Security=True</Value>
     </Setting>
+    <Setting Name="BD_CASINO2ConnectionString1" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=FENIX\SQLEXPRESS;Initial Catalog=BD_CASINO2;Integrated Security=True&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=FENIX\SQLEXPRESS;Initial Catalog=BD_CASINO2;Integrated Security=True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
