--- a/Casino/Casino.vbproj
+++ b/Casino/Casino.vbproj
@@ -81,6 +81,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BD_CASINO2DataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="login.Designer.vb">
+      <DependentUpon>login.vb</DependentUpon>
+    </Compile>
+    <Compile Include="login.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="MantenedorStock.Designer.vb">
       <DependentUpon>MantenedorStock.vb</DependentUpon>
     </Compile>
@@ -123,6 +129,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="login.resx">
+      <DependentUpon>login.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MantenedorStock.resx">
       <DependentUpon>MantenedorStock.vb</DependentUpon>
     </EmbeddedResource>
